# ddbj-validator

./: .dockerignore  .gitignore  Dockerfile  README.md  bsi-validator-ddbj.bat  bsi-validator-ddbj.sh  bsi-validator.sh  ddbj-validator-seq.bat  ddbj-validator-seq.sh  main.py  pyproject.toml  requirements.txt  seq_validator.sh
apps/ddbj/: cli.py  context.py  db_metadata.py  file_manager.py  orchestrator.py  parser.py  preprocessor.py  reporter.py  validator.py
apps/ddbj/autofix/: __init__.py  external_db.py  format.py  manager.py
apps/ddbj/resources/: definitions.json  dra_crosscheck.json
apps/ddbj/rules/: annotation.py  cross.py  definitions.py  division_datatype.py  entry_consistency.py  sequence.py
apps/ddbj/tests/: .gitignore  run_tests.py
apps/ddbj/tests/0001-0999/ANN0040/: ANN0040_1.fail.ann  ANN0040_1.fail.fasta  ANN0040_2.fail.ann
apps/ddbj/tests/0001-0999/ANN0050/: ANN0050_1.fail.ann
apps/ddbj/tests/0001-0999/ANN0120/: ANN0120_1.fail.ann  ANN0120_1.fail.fasta  ANN0120_2.fail.ann  ANN0120_2.fail.fasta
apps/ddbj/tests/0001-0999/ANN0140/: ANN0140_1.fail.ann  ANN0140_2.fail.ann
apps/ddbj/tests/0001-0999/ANN0160/: ANN0160_1.fail.ann
apps/ddbj/tests/0001-0999/ANN0170/: ANN0170_1.clean.ann
apps/ddbj/tests/0001-0999/ANN0180/: ANN0180_1.cleanup.ann
apps/ddbj/tests/0001-0999/ANN0185/: ANN0185_email.fail.ann  ANN0185_hold_date.fail.ann  ANN0185_keyword.fail.ann
apps/ddbj/tests/0001-0999/ANN0190/: ANN0190_1.fail.ann  ANN0190_2.fail.ann
apps/ddbj/utils/: location.py  translation.py
common/: db_manager.py  db_taxonomy.py  ncbi_api.py
common/resources/geo/: countries_50m.parquet  insdc_geo_mapping.json
common/rules/: base.py
common/utils/: features.py
(+306 files in other folders)
