[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddbj-validator"
version = "0.1.0-beta"
description = "BSI validation tools for DDBJ, BioProject, BioSample etc."
dependencies = [
    "biopython",
    "psycopg2-binary",
    "python-dateutil",
    "python-dotenv",
    "requests",
    "intervaltree",
    "defusedxml",
    "geopandas",
    "pyarrow",
    "shapely"
]

[project.scripts]
# ルートにある main.py のパス
bsi-validator = "main:main"
# apps ディレクトリ配下を指定
ddbj-validator = "apps.ddbj.cli:main"

[tool.setuptools]
# ルートにある main.py を単独モジュールとして認識させる
py-modules = ["main"]

[tool.setuptools.packages.find]
# config や geo を除外し、Pythonパッケージとして認識させるディレクトリを限定する
include = ["common*", "apps*"]

# Python以外のリソースファイルをパッケージに同梱
[tool.setuptools.package-data]
"apps.ddbj.resources" = ["*.json"]
"common.resources" = ["*.txt"]
"common.resources.geo" = ["*.parquet", "*.json"]